--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "babel-node": "babel-node --presets=@babel/preset-env",
     "dev": "nodemon --exec npm run babel-node src/app.js",
     "build": "babel src --out-dir dist",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
